# pirrtools

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CONTAINER.md  CONVERSATION_LOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PANDAS_RICH_STYLING_RESEARCH.md  README.md  SOHelp.ipynb  Str2d.py  api_reference.html  changelog.html  contributing.html  docker-compose.yml  example_to_rich_styling.py  examples.html  genindex.html  index.html  installation.html  jupyter_example.html  jupyter_example.ipynb  modules.html  objects.inv  pandas_rich_styling_research.py  pirrtools.html  pirrtools.structures.html  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  sequences.py  (+7 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.doctrees/: api_reference.doctree  changelog.doctree  index.doctree  installation.doctree  pirrtools.doctree  pirrtools.structures.doctree
.doctrees/docs/: modules.doctree  pirrtools.structures.doctree
.github/workflows/: ci.yml  deploy.yml  docs.yml  publish-to-test-pypi.yml  publish.yml  pylint.yml
_modules/: index.html  pirrtools.html
_modules/pirrtools/: list_chunks.html  pandas.html  sequences.html
_modules/pirrtools/structures/: attrdict.html  attrpath.html
_sources/: api_reference.rst  changelog.rst  contributing.rst  index.rst  index.rst.txt  installation.rst  jupyter_example.ipynb.txt  modules.rst  pirrtools.rst  pirrtools.structures.rst  to_rich_guide.rst.txt  to_rich_tutorial.ipynb.txt  to_rich_tutorial.rst.txt
_static/: copybutton.js
docs/: Makefile  conf.py  examples.rst  jupyter_example.ipynb  modules.html  pirrtools.html  pirrtools.structures.html  rich_directive.py  to_rich_tutorial.ipynb  to_rich_tutorial.rst
docs/_build/html/: .buildinfo  api_reference.html  changelog.html  contributing.html  examples.html  genindex.html  index.html  installation.html  modules.html  objects.inv  pirrtools.html  pirrtools.structures.html  py-modindex.html  search.html  searchindex.js  to_rich_tutorial.html
docs/_build/html/.doctrees/: contributing.doctree  examples.doctree  modules.doctree  to_rich_tutorial.doctree
docs/_build/html/.doctrees/docs/: pirrtools.doctree
docs/_build/html/_modules/: index.html  pirrtools.html
docs/_build/html/_modules/pirrtools/: list_chunks.html  pandas.html  sequences.html
docs/_build/html/_modules/pirrtools/structures/: attrdict.html  attrpath.html
docs/_build/html/_static/: documentation_options.js
docs/_build/html/docs/: modules.html  pirrtools.html  pirrtools.structures.html
examples/: example_to_rich_styling.py  gradient_example.py  pandas_rich_styling_research.py  test_full_width_backgrounds.py  test_padding.py  to_rich_demo.py  to_rich_examples.py  tutor.py
pirrtools/: __init__.py  cli.py  list_chunks.py  load.py  pandas.py  sequences.py
pirrtools-test/: pyvenv.cfg
pirrtools-test/Scripts/: activate  activate.bat
pirrtools/structures/: __init__.py  attrdict.py  attrpath.py
scripts/: docker-dev.sh  verify-container.sh  verify-dev-tools.sh
tests/: test_init.py  test_list_chunks.py  test_load.py  test_pandas.py  test_sequences.py  test_structures.py  test_to_rich.py
