[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pirrtools"
version = "0.2.14"  # Update this version number before you upload a new version to PyPI
description = "Collection of tools I use in my projects"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Sean Smith", email = "pirsquared.pirr@gmail.com" }
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "pandas",
  "numpy",
  "feather-format",
  "ipython",
  "Pygments",
  "rich",
  "jinja2",
  "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/pirsquared/pirrtools"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "build",
  "twine",
  "black",
  'pre-commit',
  'pylint',
  'sphinx',
  'sphinx-rtd-theme',
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | __pycache__
  | old
  | static
  | unmanaged
)/
'''
