[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[flake8]
max-line-length = 88
extend-ignore = E203, W503, F403, F405
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    .tox,
    .mypy_cache,
    pirrtools-test/
